--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.14.0",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "aos": "^2.3.4",
+    "bootstrap": "^5.3.6",
+    "class-variance-authority": "^0.7.1",
     "flowbite-react": "^0.10.1",
     "framer-motion": "^12.16.0",
     "lucide-react": "^0.513.0",
@@ -20,7 +23,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.1",
-    "recharts": "^2.15.3"
+    "recharts": "^2.15.3",
+    "tailwind-variants": "^1.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
